--- a/distribution/docs/src/main/resources/content/_managing/_installing/configure-single-sign-on.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_installing/configure-single-sign-on.adoc
@@ -7,7 +7,7 @@
 
 .[[_configuring_sso]]Configure Single Sign On (SSO)
 ****
-Configure Single Sign On method: SAML or OIDC.
+Configure Single Sign On method for SAML or OIDC.
 (((Single Sign On, SSO)))
 
 .SAML SSO
