--- a/distribution/docs/src/main/resources/content/_managing/_running/catalog-commands.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_running/catalog-commands.adoc
@@ -81,7 +81,7 @@ The `--created-after` and `--created-before` options allow filtering on the date
 These date ranges are exclusive (i.e., if the date and time match exactly, the metacard will not be included).
 [[_date_filtering_options]]The date filtering options (`--created-after`, `--created-before`, `--modified-after`, and `--modified-before`) can be used in any combination, with the export result including only metacards that match all of the provided conditions.
 
-If no date filtering options are provided, created and modified dates are ignored, so that all metacards match.
+If no date filtering options are provided, `created` and `modified` dates are ignored, so that all metacards match.
 
 .Date Syntax
 Supported dates are taken from the common subset of ISO8601, matching the datetime from the following syntax:
