--- a/distribution/docs/src/main/resources/content/_managing/_securing/managing-keystores.adoc
+++ b/distribution/docs/src/main/resources/content/_managing/_securing/managing-keystores.adoc
@@ -124,7 +124,7 @@ Additionally, the password that ${branding} uses to decrypt (unlock) the key and
 ${branding} assumes that password used to unlock the keystore is the same password that unlocks private keys in the keystore.
 ====
 
-The location, file name, passwords and type of the server and trust key stores can be set in the `custom.system.properties` file:
+The location, file name, passwords, type of the server, and trust key stores can be set in the `custom.system.properties` file:
 
 . Setting the Keystore and Truststore Java Properties
 [source]
