--- a/distribution/docs/src/main/resources/content/_metadataReference/datetime-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/datetime-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.DateTime: Attributes in this group reflect temporal aspects about the resource. *Injected by default.*
+.DateTime (Attributes in this group reflect temporal aspects about the resource.) *Injected by default.*
 [cols="5" options="header"]
 |===
 |Term
