--- a/distribution/docs/src/main/resources/content/_metadataReference/media-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/media-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.Media: Attributes in this group reflect metadata about media in general. *Injected by default.*
+.Media (Attributes in this group reflect metadata about media in general.) *Injected by default.*
 [cols="1,2,1,1,1" options="header"]
 |===
 |Term
