--- a/distribution/docs/src/main/resources/content/_metadataReference/metacard-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/metacard-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.Metacard: Attributes in this group describe the metacard itself. *Injected by default.*
+.Metacard (Attributes in this group describe the metacard itself.) *Injected by default.*
 [cols="5" options="header"]
 |===
 |Term
