--- a/distribution/docs/src/main/resources/content/_metadataReference/supported-file-formats.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/supported-file-formats.adoc
@@ -9,7 +9,7 @@
 
 ${branding} supports a wide variety of file types and data types for ingest.
 The ${branding}'s internal Input Transformers extract the necessary data into a <<{metadata-prefix}catalog_taxonomy_definitions,generalized format>>.
-${branding} supports ingest of many datatypes and commonly used file formats, such as Microsoft office products: Word documents, Excel spreadsheets, and PowerPoint presentations as well as .pdf files, GeoJson and others. See <<{metadata-prefix}all_file_formats_supported,complete list>>.
+${branding} supports ingest of many datatypes and commonly used file formats, such as Microsoft office products: including Word documents, Excel spreadsheets, and PowerPoint presentations, as well as .pdf files, GeoJson, and others. See <<{metadata-prefix}all_file_formats_supported,complete list>>.
 Many of these file types support additional <<_file_format_specific_attributes,file format-specific attributes>> from which additional metadata can be extracted.
 
 [NOTE]
