--- a/distribution/docs/src/main/resources/content/_metadataReference/topic-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/topic-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.Topic: Attributes in this group describe the topic of the resource. *Injected by default.*
+.Topic (Attributes in this group describe the topic of the resource.) *Injected by default.*
 [cols="1,2,1,1,1" options="header"]
 |===
 
