--- a/distribution/docs/src/main/resources/content/_reference/_dependencyList/js-dependency-list.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_dependencyList/js-dependency-list.adoc
@@ -3,7 +3,7 @@
 :status: published
 :parent: ${branding} Dependency List
 :order: 01
-:summary: ${branding} ${project.version} Javascript Dependency List.
+:summary: ${branding} ${project.version} Javascript Dependency List
 
 == {summary}
 ((({title})))
