--- a/distribution/docs/src/main/resources/content/_reference/_tables/sourcePoller.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_tables/sourcePoller.adoc
@@ -19,10 +19,9 @@
 |Poll Interval (minutes)
 |pollIntervalMinutes
 |Integer
-|The interval (in minutes) at which to recheck the availability of all sources. Must be at least 1 minute.
+a|The interval (in minutes) at which to recheck the availability of all sources. Must be at least 1 minute.
 
-WARNING:
-There is a maximum delay of 2*`pollIntervalMinutes` for the Source Poller to be updated after the availability of a source changes or a source is created/modified/deleted.
+WARNING: There is a maximum delay of 2*`pollIntervalMinutes` for the Source Poller to be updated after the availability of a source changes or a source is created/modified/deleted.
 Currently the <<{developing-prefix}standard_catalog_framework,Standard Catalog Framework>> and the <<{integrating-prefix}catalog_rest_endpoint,Catalog REST Endpoint>> use the Source Poller to get source availabilities.
 The `pollIntervalMinutes` should not be set to value a which results in an unacceptable maximum delay.
 |1
