--- a/distribution/docs/src/main/resources/content/_using/using-simple-search-ui.adoc
+++ b/distribution/docs/src/main/resources/content/_using/using-simple-search-ui.adoc
@@ -21,7 +21,7 @@ Enter one or more of the available search criteria to execute a query:
 
 Keyword Search:: A text box allowing the user to enter a textual query. This supports the use of (*) wildcards. If blank, the query will contain a contextual component.
 Temporal Query:: Select from *any*, *relative*, or *absolute*. Selecting *Any* results in no temporal restrictions on the query, selecting *relative* allows the user to query a period from some length of time in the past until now, and selecting *absolute* allows the user to specify a *start* and *stop* date range.
-Spatial Search:: Select from *any*, *point-radius*, and *bounding box*. Selecting *Any* results in no spatial restrictions on the query, selecting *point-radius* allows the user to specify a *lat/lon* and *radius* to search, and selecting a *bounding box* allows the user to specify an *eastern*, *western*, *southern* and *northern* boundary to search within.
+Spatial Search:: Select from *any*, *point-radius*, and *bounding box*. Selecting *Any* results in no spatial restrictions on the query, selecting *point-radius* allows the user to specify a *lat/lon* and *radius* to search, and selecting a *bounding box* allows the user to specify an *eastern*, *western*, *southern*, and *northern* boundary to search within.
 Type Search:: Select from *any*, or a specific type. Selecting *Any* results in no type restrictions on the query, and Selecting *Specific Types* shows a list of known content types on the federation, and allows the user to select a specific type to search for.
 Sources:: Select from *none*, *all sources*, or *specific sources*. Selelcting *None* results in querying only the local provider, Selecting *All Sources* results in an enterprise search where all federations are queried, and selecting *Specific Sources* allows the user to select which sources are queried.
 Results per Page:: Select the number of results to be returned by a single query.
