--- a/distribution/docs/src/main/resources/content/_architectures/_securityFramework/external-ws-s-sts-support.adoc
+++ b/distribution/docs/src/main/resources/content/_architectures/_securityFramework/external-ws-s-sts-support.adoc
@@ -9,7 +9,7 @@
 ((({title})))
 
 This configuration works just like the STS Client Config for the internal STS, but produces standard requests instead of the custom ${branding} ones.
-It supports two new auth types for the context policy manager, WSSBASIC and WSSPKI.
+It supports two new auth types for the context policy manager, `WSSBASIC` and `WSSPKI`.
 Use these auth types when connecting to a non-${branding} STS or if ignoring realms.
 
 === Security STS Address Provider
