--- a/distribution/docs/src/main/resources/content/_metadataReference/security-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/security-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.Security: Attributes in this group relate to security of the resource and metadata. *Injected by default.*
+.Security (Attributes in this group relate to security of the resource and metadata.) *Injected by default.*
 [cols="1,2,1,1,1" options="header"]
 |===
 
