--- a/distribution/docs/src/main/resources/content/_metadataReference/validation-attributes-table.adoc
+++ b/distribution/docs/src/main/resources/content/_metadataReference/validation-attributes-table.adoc
@@ -7,7 +7,7 @@
 
 == {title}
 
-.Validation: Attributes in this group identify validation issues with the metacard and/or resource. *Injected by default.*
+.Validation (Attributes in this group identify validation issues with the metacard and/or resource.) *Injected by default.*
 [cols="1,2,1,1,1" options="header"]
 |===
 
