--- a/distribution/docs/src/main/resources/content/_reference/_dependencyList/ddf-dependency-list.adoc
+++ b/distribution/docs/src/main/resources/content/_reference/_dependencyList/ddf-dependency-list.adoc
@@ -3,7 +3,7 @@
 :status: published
 :parent: ${ddf-branding} Dependency List
 :order: 00
-:summary: ${ddf-branding} ${project.version} Dependency List.
+:summary: ${ddf-branding} ${project.version} Dependency List
 
 == {summary}
 ((({title})))
